try to fix alignment border countries heading and buttons on same line, looks off still

--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -114,7 +114,7 @@ $filter_top_desktop: 100px;
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
